--- a/.github/workflows/docker_publish_release.yml
+++ b/.github/workflows/docker_publish_release.yml
@@ -14,6 +14,11 @@ on:
         default: '1.0.0'
         type: string
         description: 'Release version (e.g., 1.0.0)'
+      publish:
+        required: false
+        default: true
+        type: boolean
+        description: 'Whether to publish the release'
 
 jobs:
   tests:
@@ -89,9 +94,11 @@ jobs:
 
         - name: Update Docker Image Tags in Pipeline
           run: |
-            sed -i "s|qubership-pipegene:[^']*|qubership-pipegene:${{ github.event.inputs.version }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-            sed -i "s|qubership-envgene:[^']*|qubership-envgene:${{ github.event.inputs.version }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
-            sed -i "s|qubership-effective-set-generator:[^']*|qubership-effective-set-generator:${{ github.event.inputs.version }}|g" github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+            TARGET_FILE="github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml"
+            NEW_TAG="${{ github.event.inputs.version }}"
+            sed -i "/DOCKER_IMAGE_TAG_PIPEGENE:/c\\  DOCKER_IMAGE_TAG_PIPEGENE: \"${NEW_TAG}\"" "$TARGET_FILE"
+            sed -i "/DOCKER_IMAGE_TAG_ENVGENE:/c\\  DOCKER_IMAGE_TAG_ENVGENE: \"${NEW_TAG}\"" "$TARGET_FILE"
+            sed -i "/DOCKER_IMAGE_TAG_EFFECTIVE_SET_GENERATOR:/c\\  DOCKER_IMAGE_TAG_EFFECTIVE_SET_GENERATOR: \"${NEW_TAG}\"" "$TARGET_FILE"
 
             if git diff --quiet github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml; then
               echo "No changes to commit - no images were built or tags were already up to date"
@@ -223,4 +230,4 @@ jobs:
     uses: netcracker/qubership-workflow-hub/.github/workflows/release-drafter.yml@v1.0.3
     with:
       version: ${{ github.event.inputs.version }}
-      publish: false
+      publish: ${{ github.event.inputs.publish }}
