feat: Updated the sequence of tag creation and tag propagation  (#646)

--- a/.github/workflows/docker_publish_release.yml
+++ b/.github/workflows/docker_publish_release.yml
@@ -18,7 +18,7 @@ on:
         required: false
         default: true
         type: boolean
-        description: 'Whether to publish the release'
+        description: 'Publish the release'
 
 jobs:
   tests:
@@ -63,14 +63,8 @@ jobs:
           echo "Tag already exists: v${{ github.event.inputs.version }}"
           exit 1
 
-  tag:
-    needs: [check-tag]
-    uses: netcracker/qubership-workflow-hub/.github/workflows/tag-creator.yml@v1.0.3
-    with:
-      tag-name: v${{ github.event.inputs.version }}
-
   update_image_tags:
-    needs: [tag]
+    needs: [check-tag]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -118,9 +112,14 @@ jobs:
             else
               echo "No changes to commit - skipping git operations"
             fi
+  tag:
+    needs: [update_image_tags]
+    uses: netcracker/qubership-workflow-hub/.github/workflows/tag-creator.yml@v1.0.3
+    with:
+      tag-name: v${{ github.event.inputs.version }}
 
   build-qubership-pipegene:
-    needs: [update_image_tags]
+    needs: [tag]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -145,7 +144,7 @@ jobs:
         version: ${{ inputs.version }}
 
   build-qubership-envgene:
-    needs: [update_image_tags]
+    needs: [tag]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -170,7 +169,7 @@ jobs:
         version: ${{ inputs.version }}
 
   build-effective-set-jar:
-    needs: [update_image_tags]
+    needs: [tag]
     uses: netcracker/qubership-workflow-hub/.github/workflows/maven-publish.yml@v1.0.3
     with:
       maven-command: "--batch-mode package -Dgpg.skip=true -f build_effective_set_generator_java/pom.xml"
@@ -207,7 +206,7 @@ jobs:
         version: ${{ inputs.version }}
 
   build-instance-repo-pipeline:
-    needs: [update_image_tags]
+    needs: [tag]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -226,7 +225,11 @@ jobs:
         version: ${{ inputs.version }}
 
   github-release:
-    needs: [build-qubership-pipegene, build-qubership-envgene, build-effective-set-generator, build-instance-repo-pipeline]
+    needs:
+      - build-qubership-pipegene
+      - build-qubership-envgene
+      - build-effective-set-generator
+      - build-instance-repo-pipeline
     uses: netcracker/qubership-workflow-hub/.github/workflows/release-drafter.yml@v1.0.3
     with:
       version: ${{ github.event.inputs.version }}
