feat: Updated scripts and upload artifact action in instance pipeline (#661)
* Updated scripts and upload artifact action in instance pipeline

---------

Co-authored-by: qubership-actions[bot] <qubership-actions[bot]@users.noreply.github.com>

--- a/github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
+++ b/github_workflows/instance-repo-pipeline/.github/workflows/pipeline.yml
@@ -74,9 +74,9 @@ env:
   DOCKER_IMAGE_NAME_EFFECTIVE_SET_GENERATOR: "${{ vars.DOCKER_REGISTRY || 'ghcr.io/netcracker' }}/qubership-effective-set-generator"
 
   #DOCKER_IMAGE_TAGS
-  DOCKER_IMAGE_TAG_PIPEGENE: "main_20250924-064629"
-  DOCKER_IMAGE_TAG_ENVGENE: "main_20250924-064622"
-  DOCKER_IMAGE_TAG_EFFECTIVE_SET_GENERATOR: "main_20250924-064744"
+  DOCKER_IMAGE_TAG_PIPEGENE: "feature_update_pipeline_scripts_after_feedback_20250924-125244"
+  DOCKER_IMAGE_TAG_ENVGENE: "feature_update_pipeline_scripts_after_feedback_20250924-125238"
+  DOCKER_IMAGE_TAG_EFFECTIVE_SET_GENERATOR: "feature_update_pipeline_scripts_after_feedback_20250924-125344"
 
 jobs:
   set_docker_images:
@@ -230,6 +230,7 @@ jobs:
         with:
           name: generate_inventory_${{ env.PACKAGE_NAME }}
           path: environments/${{ matrix.environment }}
+          include-hidden-files: true
       ##########################
 
 
@@ -257,6 +258,7 @@ jobs:
         with:
           name: credential_rotation_${{ env.PACKAGE_NAME }}
           path: environments/${{ matrix.environment }}
+          include-hidden-files: true
       ##########################
 
 
@@ -310,6 +312,7 @@ jobs:
         with:
           name: build_env_${{ env.PACKAGE_NAME }}
           path: environments/${{ matrix.environment }}
+          include-hidden-files: true
       ##########################
 
 
@@ -350,6 +353,7 @@ jobs:
         with:
           name: generate_effective_set_${{ env.PACKAGE_NAME }}
           path: environments/${{ matrix.environment }}
+          include-hidden-files: true
       ##########################
 
 
@@ -396,3 +400,5 @@ jobs:
         with:
           name: git_commit_${{ env.PACKAGE_NAME }}
           path: environments/${{ matrix.environment }}
+          include-hidden-files: true
+      ##########################
